<resources>
    <string name="app_name">Household Routine</string>
    <string name="notification_channel_name" translatable="false">Household Routine</string>

    <!-- keine erinnerungen oder checklisten in der main activity -->
    <string name="reminders_completed_label">No reminders set</string>
    <string name="reminders_completed_description">Create new reminders to schedule your tasks</string>
    <string name="reminders_complete_icon_description">No reminders set icon</string>

    <!-- menü einträge -->
    <string name="action_settings">Settings</string>
    <string name="action_extras">Rewards</string>

    <!-- list item -->
    <string name="end_date">Ends at:</string>
    <string name="date_example" translatable="false">10.10.2017 18:11</string>
    <string name="title_example" translatable="false">Reminder title</string>
    <string name="description_example" translatable="false">Lorem ipsum dolor sit amet</string>
    <string name="icon_description">Icon</string>
    <string name="checklist_example" translatable="false">• Take out trash \n• Clean the house \n• Do the dishes</string>
    <string name="outdated">Outdated</string>

    <!-- create new task -->
    <string name="new_task_title">Create a reminder</string>
    <string name="new_task_save">Save</string>
    <string name="new_task_name_hint">Name</string>
    <string name="new_task_description_hint">Description</string>
    <string name="new_task_end_date_hint">Date</string>
    <string name="new_task_end_time_hint">Time</string>
    <string name="new_task_type_label">Reminder type</string>
    <string name="new_task_type_reminder">Reminder</string>
    <string name="new_task_type_checklist">Checklist</string>
    <string name="new_task_predefined_reminders_label">Predefined reminders</string>
    <string name="new_task_name_missing">Please enter a name for this task</string>
    <string name="new_task_date_missing">Please set a date for this task</string>
    <string name="new_task_time_missing">Please set a time for this task</string>
    <string name="new_task_type_missing">please select a type for this task</string>
    <string name="new_task_saved">Task saved</string>
    <string name="new_task_items_missing">Please add at least one item to the checklist</string>

    <string name="new_task_checklist_label">Type of checklist</string>
    <string name="new_task_checklist_type">Predefined checklist</string>
    <string name="new_task_checklist_own">Create own checklist</string>
    <string name="new_task_checklist_own_add_item">Add item</string>
    <string name="new_task_checklist_own_item_debug" translatable="false">Item</string>

    <!-- Task details -->
    <string name="task_details_label">Details</string>
    <string name="task_details_start_date_label">Started at:</string>
    <string name="task_details_end_date_label">Ends at:</string>
    <string name="task_details_checklist_item_example" translatable="false">Item name</string>
    <string name="task_details_checklist_label">Checklist items:</string>
    <string name="task_details_complete">Complete</string>
    <string name="task_details_repeat">Repeat</string>
    <string name="task_details_delete">Delete</string>
    <string name="task_details_complete_text">Completing this reminder will remove it and award you with points. Do you want to proceed?</string>
    <string name="task_details_complete_yes">Yes</string>
    <string name="task_details_complete_no">No</string>
    <string name="task_details_complete_delete_text">Do you want to delete this reminder?</string>

    <!-- repeat reminder -->
    <string name="repeat_label">Repeat reminder</string>
    <string name="repeat_info_label">This completes the reminder and sets a new time</string>

    <!-- Extras activity -->
    <string name="extras_title">Rewards</string>
    <string name="extras_points">Points: </string>
    <string name="extras_points_example" translatable="false">750</string>
    <string name="extras_reminders">Completed reminders:</string>
    <string name="extras_reminders_example" translatable="false">75</string>
    <string name="extras_information_label">Unlocked information:</string>
    <string name="information_title_example" translatable="false">Title example</string>
    <string name="information_description_example" translatable="false">Description example</string>
    <string name="information_source_label">Source: </string>
    <string name="information_source_example" translatable="false">Source example</string>
    <string name="extras_no_information_label">Complete reminders to unlock a new information</string>
    <string name="extras_no_information_icon">No information icon</string>

    <!-- rewarded points activity -->
    <string name="rewarded_points_label">Rewarded Points</string>
    <string name="no_rewarded_points_label">You have not earned any points yet</string>
    <string name="no_rewarded_points_icon">No points icon</string>
    <string name="points_title_example" translatable="false">Title example</string>
    <string name="points_description_example" translatable="false">Description example</string>
    <string name="points_date_label">Completed at:</string>
    <string name="points_date_example" translatable="false">1.1.1990</string>
    <string name="points_points_label">Points:</string>
    <string name="points_points_example" translatable="false">130</string>
    <string name="points_type_example" translatable="false">Reminder</string>
    <string name="points_type_reminder">Reminder</string>
    <string name="points_no_description">-No description-</string>
</resources>
