<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    android:minHeight="?android:attr/listPreferredItemHeight"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    android:layout_marginLeft="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginEnd="8dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/points_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="@color/primary_text"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/points_title_example" />

        <TextView
            android:id="@+id/points_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/secondary_text"
            app:layout_constraintEnd_toEndOf="@+id/points_title"
            app:layout_constraintStart_toStartOf="@+id/points_title"
            app:layout_constraintTop_toBottomOf="@+id/points_title"
            tools:text="@string/points_description_example" />

        <TextView
            android:id="@+id/points_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/points_date_label"
            android:textColor="@color/secondary_text"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/points_description"
            app:layout_constraintTop_toBottomOf="@+id/points_description" />

        <TextView
            android:id="@+id/points_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/points_date_label"
            app:layout_constraintTop_toTopOf="@+id/points_date_label"
            tools:text="@string/points_date_example" />

        <TextView
            android:id="@+id/points_points_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/points_points_label"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/points_points"
            app:layout_constraintTop_toTopOf="@+id/points_date" />

        <TextView
            android:id="@+id/points_points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/points_description"
            app:layout_constraintTop_toTopOf="@+id/points_points_label"
            tools:text="@string/points_points_example" />

        <TextView
            android:id="@+id/points_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/points_points"
            app:layout_constraintTop_toBottomOf="@+id/points_points"
            tools:text="@string/points_type_example" />
    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>