<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context="com.example.android.householdroutine.CreateTask">

        <TextView
            android:id="@+id/new_task_type_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="16dp"
            android:text="@string/new_task_type_label"
            android:textColor="@color/primary_text"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_task_end_time" />

        <RadioGroup
            android:id="@+id/new_task_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-16dp"
            android:layout_marginTop="-9dp"
            app:layout_constraintLeft_toLeftOf="@+id/new_task_type_label"
            app:layout_constraintTop_toBottomOf="@+id/new_task_type_label">

            <RadioButton
                android:id="@+id/new_task_type_button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:duplicateParentState="false"
                android:text="@string/new_task_type_reminder"
                android:textColor="@color/secondary_text"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/new_task_type_button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/new_task_type_checklist"
                android:textColor="@color/secondary_text"
                android:textSize="18sp" />
        </RadioGroup>

        <EditText
            android:id="@+id/new_task_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="0dp"
            android:ems="10"
            android:hint="@string/new_task_name_hint"
            android:inputType="text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/new_task_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/new_task_description_hint"
            android:inputType="textMultiLine"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_task_name" />

        <EditText
            android:id="@+id/new_task_end_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/new_task_end_date_hint"
            android:inputType="none"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_task_description" />

        <EditText
            android:id="@+id/new_task_end_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/new_task_end_time_hint"
            android:inputType="none"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_task_end_date" />


    </android.support.constraint.ConstraintLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/new_task_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:clickable="true"
        android:tint="@android:color/white"
        app:backgroundTint="@color/accent"
        app:elevation="6dp"
        app:fabSize="normal"
        app:pressedTranslationZ="12dp"
        app:rippleColor="@color/primary_text"
        app:srcCompat="@drawable/ic_done_black_96dp" />


</FrameLayout>

