<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:minHeight="?android:attr/listPreferredItemHeight"
    android:paddingBottom="8dp">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageView
            android:id="@+id/list_item_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:contentDescription="@string/icon_description"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_access_time_black_48px" />

        <TextView
            android:id="@+id/list_item_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:maxLines="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="@color/primary_text"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/list_item_icon"
            app:layout_constraintTop_toTopOf="@+id/list_item_icon"
            tools:text="@string/title_example" />

        <TextView
            android:id="@+id/list_item_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/secondary_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="@+id/list_item_name"
            app:layout_constraintTop_toBottomOf="@+id/list_item_name"
            tools:text="@string/description_example" />

        <TextView
            android:id="@+id/list_item_end_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/end_date"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/secondary_text"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/list_item_description"
            app:layout_constraintTop_toBottomOf="@+id/list_item_description" />

        <TextView
            android:id="@+id/list_Item_end_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#B71C1C"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/list_item_end_date_label"
            app:layout_constraintTop_toTopOf="@+id/list_item_end_date_label"
            tools:text="@string/date_example" />

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>
