<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/new_task_checklist_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RadioGroup
        android:id="@+id/new_task_checklist_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_task_checklist_type_label">

        <RadioButton
            android:id="@+id/new_task_checklist_type_button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:duplicateParentState="false"
            android:text="@string/new_task_checklist_type"
            android:textColor="@color/secondary_text"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/new_task_checklist_type_button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/new_task_checklist_own"
            android:textColor="@color/secondary_text"
            android:textSize="18sp" />
    </RadioGroup>

    <!-- own checklist view -->
    <LinearLayout
        android:id="@+id/new_task_checklist_type_own"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_task_checklist_type">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/own_checklist_add_item_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/new_task_checklist_own_add_item"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/own_checklist_add_item"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_gravity="center_vertical"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                android:tint="@color/secondary_text"
                android:onClick="addItem"
                app:srcCompat="@drawable/ic_add_black_48dp"/>

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/new_task_checklist_type_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:text="@string/new_task_checklist_label"
        android:textColor="@color/primary_text"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>